--- a/cotizador_acerta/templates/reportes/cotizador_general_detail.html
+++ b/cotizador_acerta/templates/reportes/cotizador_general_detail.html
@@ -118,13 +118,13 @@
               <td> {{ cotizacion.conductor.nombre }} {{ cotizacion.conductor.apellido }}</td>
               <td>{{ cotizacion.conductor.marca.nombre }}</td>
               <td>{{ cotizacion.conductor.modelo.nombre }}</td>
-              <td> B/. {{ cotizacion.total }}</td>
+              <td> B/. {{ cotizacion.total|intcomma }}</td>
               {% if cotizacion.status == 'Enviada' or cotizacion.status == 'Guardada' %}
                 <td><span class="badge bg-orange">{{ cotizacion.status }}</span></td>
               {% elif cotizacion.status == 'Aprobada' %}
                   <td><span class="badge bg-green">{{ cotizacion.status }}</span></td>
               {% else %}
-                  <td><span class="pullbadge bg-red">{{ cotizacion.status }}</span></td>
+                  <td><span class="badge bg-red">{{ cotizacion.status }}</span></td>
               {% endif %}
               <td><a href="{% url 'cotizaciones_details' cotizacion.pk %}">Ver</a></td>
             </tr>
