--- a/cotizador_acerta/templates/administrador/list_modelo.html
+++ b/cotizador_acerta/templates/administrador/list_modelo.html
@@ -1,8 +1,8 @@
 {% extends "administrador/base_admin.html" %}
-
+{% load static %}
 {% block titulo %}
     <h1>
-        Editar Factor: <strong>Antigüedad</strong>
+        <strong>Modelos de {{ marca.nombre }}</strong>
     </h1>
 {% endblock titulo %}
 {% load static %}
@@ -17,45 +17,46 @@
     }
 </style>
 {% endblock extracss %}
+
 {% block content %}
 
 <div class="row">
-  <div class="col-md-2 col-sm-hidden col-xs-hidden"></div>
-  <div class="col-xs-12 col-sm-12 col-md-8">
+  <div class="col-md-1 col-sm-hidden col-xs-hidden"></div>
+  <div class="col-xs-12 col-sm-12 col-md-10">
     <div class="box box-default color-palette-box">
       <div class="box-body">
         <table id="example1" class="table table-bordered table-striped dataTable" role="grid" aria-describedby="example1_info">
           <thead>
             <tr>
-              <th>Límite</th>
-              <th>Factor Inferior</th>
-              <th>Factor Superior</th>
+              <th>Nombre</th>
+              <th>Descuento</th>
+              <th>Recargo</th>
             </tr>
           </thead>
           <tbody>
-            {% for antiguedad in antiguedades %}
+            {% for modelo in modelos %}
                 <tr>
-                    <td><a href="{% url 'admin_antiguedad' antiguedad.pk %}">{{ antiguedad.limite }}</a></td>
-                    <td>{{ antiguedad.factor_menor|floatformat:2 }}</td>
-                    <td>{{ antiguedad.factor_mayor|floatformat:2 }}</td>
+                    <td><a href="{% url 'admin_modelo' modelo.pk %}">{{ modelo.nombre }}</a></td>
+                    <td>{{ modelo.descuento }}</td>
+                    <td>{{ modelo.recargo }}</td>
                 </tr>
             {% endfor %}
           </tbody>
           <tfoot>
             <tr>
-              <th>Límite</th>
-              <th>Factor Inferior</th>
-              <th>Factor Superior</th>
+              <th>Nombre</th>
+              <th>Descuento</th>
+              <th>Recargo</th>
             </tr>
           </tfoot>
         </table>
       </div>
     </div>
     <div class="text-center">
-      <a href="{% url 'factores' %}" class="btn btn-primary">Atrás</a>
+      <a href="{% url 'list_marca' %}" class="btn btn-primary">Atrás</a>
     </div>
   </div>
-  <div class="col-md-2 col-sm-hidden col-xs-hidden"></div>
+  <div class="col-md-1 col-sm-hidden col-xs-hidden"></div>
 </div>
 
 {% endblock content %}
@@ -89,3 +90,4 @@
 </script>
 
 {% endblock custom_script %}
+
