--- a/cotizador_acerta/templates/administrador/list_importacion.html
+++ b/cotizador_acerta/templates/administrador/list_importacion.html
@@ -35,7 +35,7 @@
             </div><!-- /.box-body -->
           </div><!-- /.box -->
           <div class="text-center">
-            <a href="{% url 'dashboard' %}" class="btn btn-primary">Atrás</a>
+            <a href="{% url 'factores' %}" class="btn btn-primary">Atrás</a>
           </div>
         </div>
         <div class="col-md-3 col-sm-hidden col-xs-hidden"></div>
