--- a/cotizador_acerta/templates/administrador/list_marca.html
+++ b/cotizador_acerta/templates/administrador/list_marca.html
@@ -1,11 +1,11 @@
 {% extends "administrador/base_admin.html" %}
-
+{% load static %}
 {% block titulo %}
     <h1>
-        Editar Factor: <strong>Antigüedad</strong>
+        <strong>Marcas de Vehículos</strong>
     </h1>
 {% endblock titulo %}
-{% load static %}
+
 {% block extracss %}
 <link href="{% static 'plugins/datatables/dataTables.bootstrap.css' %}" rel="stylesheet">
 <style type="text/css">
@@ -17,35 +17,33 @@
     }
 </style>
 {% endblock extracss %}
+
 {% block content %}
 
 <div class="row">
-  <div class="col-md-2 col-sm-hidden col-xs-hidden"></div>
-  <div class="col-xs-12 col-sm-12 col-md-8">
+  <div class="col-md-1 col-sm-hidden col-xs-hidden"></div>
+  <div class="col-xs-12 col-sm-12 col-md-10">
     <div class="box box-default color-palette-box">
       <div class="box-body">
         <table id="example1" class="table table-bordered table-striped dataTable" role="grid" aria-describedby="example1_info">
           <thead>
             <tr>
-              <th>Límite</th>
-              <th>Factor Inferior</th>
-              <th>Factor Superior</th>
+              <th>Nombre</th>
+              <th>Listar Modelos</th>
             </tr>
           </thead>
           <tbody>
-            {% for antiguedad in antiguedades %}
+            {% for marca in marcas %}
                 <tr>
-                    <td><a href="{% url 'admin_antiguedad' antiguedad.pk %}">{{ antiguedad.limite }}</a></td>
-                    <td>{{ antiguedad.factor_menor|floatformat:2 }}</td>
-                    <td>{{ antiguedad.factor_mayor|floatformat:2 }}</td>
+                    <td><a href="{% url 'admin_marca' marca.pk %}">{{ marca.nombre }}</a></td>
+                    <td><a href="{% url 'list_modelo' marca.pk %}">Ver Modelos</a></td>
                 </tr>
             {% endfor %}
           </tbody>
           <tfoot>
             <tr>
-              <th>Límite</th>
-              <th>Factor Inferior</th>
-              <th>Factor Superior</th>
+              <th>Nombre</th>
+              <th>Listar Modelos</th>
             </tr>
           </tfoot>
         </table>
@@ -55,7 +53,7 @@
       <a href="{% url 'factores' %}" class="btn btn-primary">Atrás</a>
     </div>
   </div>
-  <div class="col-md-2 col-sm-hidden col-xs-hidden"></div>
+  <div class="col-md-1 col-sm-hidden col-xs-hidden"></div>
 </div>
 
 {% endblock content %}
