--- a/cotizador_acerta/templates/cotizar/email_corredores.html
+++ b/cotizador_acerta/templates/cotizar/email_corredores.html
@@ -294,7 +294,7 @@
                                     <table width="540" border="0" cellpadding="0" cellspacing="0" align="center" style="text-align: center; border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;" class="fullCenter2">
                                         <tbody><tr>
                                             <td valign="middle" width="100%" style="text-align: left; font-family: Helvetica, Arial, sans-serif; font-size: 14px; color: rgb(63, 67, 69); line-height: 24px;" mc:edit="41">
-                                                <!--[if !mso]><!--><span style="font-family: 'proxima_nova_rgregular', Helvetica; font-weight: normal;"><!--<![endif]-->A continuación le presentamos la siguiente cotización realizada para el cliente {{cotizacion.conductor.nombre}} {{ cotizacion.conductor.apellido }} para el vehiculo {{cotizacion.conductor.marca.nombre}} {{cotizacion.conductor.modelo.nombre}} {{cotizacion.conductor.anio}}, valorado en B/. {{cotizacion.conductor.valor}} <!--[if !mso]><!--></span><!--<![endif]-->
+                                                <!--[if !mso]><!--><span style="font-family: 'proxima_nova_rgregular', Helvetica; font-weight: normal;"><!--<![endif]-->A continuación le presentamos la siguiente cotización realizada para el cliente {{cotizacion.conductor.nombre}} {{ cotizacion.conductor.apellido }} para el vehiculo {{cotizacion.conductor.marca.nombre}} {{cotizacion.conductor.modelo.nombre}} {{cotizacion.conductor.anio}}, valorado en B/. {{valor_vehiculo}} <!--[if !mso]><!--></span><!--<![endif]-->
                                             </td>
                                         </tr>
                                         <tr>
@@ -369,42 +369,42 @@
                                                     <td>Lesiones Corporales</td>
                                                     <td>{{ cotizacion.lesiones_corporales }}</td>
                                                     <td></td>
-                                                    <td>{{ cotizacion.prima_lesiones|floatformat:2|intcomma }}</td>
+                                                    <td>{{ prima_lesiones }}</td>
                                                   </tr>
                                                   <tr>
                                                     <td>Daños a la Propiedad Ajena</td>
                                                     <td>{{ cotizacion.danios_propiedad }}</td>
                                                     <td></td>
-                                                    <td>{{ cotizacion.prima_daniosProp|floatformat:2|intcomma }}</td>
+                                                    <td>{{ prima_daniosProp }}</td>
                                                   </tr>
                                                   <tr>
                                                     <td>Gastos Médicos por Accidente</td>
                                                     <td>{{ cotizacion.gastos_medicos }}</td>
                                                     <td></td>
-                                                    <td>{{ cotizacion.prima_gastosMedicos|floatformat:2|intcomma }}</td>
+                                                    <td>{{ prima_gastosMedicos }}</td>
                                                   </tr>
                                                   <tr>
                                                     <td>Colisión y Vuelco</td>
-                                                    <td>{{ cotizacion.conductor.valor|floatformat:2|intcomma }}</td>
-                                                    <td>{{ cotizacion.colision_vuelco|floatformat:2|intcomma }}</td>
-                                                    <td>{{ cotizacion.prima_colisionVuelco|floatformat:2|intcomma }}</td>
+                                                    <td>{{ valor_vehiculo }}</td>
+                                                    <td>{{ colision_vuelco }}</td>
+                                                    <td>{{ prima_colisionVuelco }}</td>
                                                   </tr>
                                                   <tr>
                                                     <td>Otros Daños</td>
-                                                    <td>{{ cotizacion.conductor.valor|floatformat:2|intcomma }}</td>
-                                                    <td>{{ cotizacion.otros_danios|floatformat:2|intcomma }}</td>
-                                                    <td>{{ cotizacion.prima_otrosDanios|floatformat:2|intcomma }}</td>
+                                                    <td>{{ valor_vehiculo }}</td>
+                                                    <td>{{ otros_danios }}</td>
+                                                    <td>{{ prima_otrosDanios }}</td>
                                                   </tr>
                                                   <tr>
                                                     <td>Incendio y Rayo</td>
-                                                    <td>{{ cotizacion.conductor.valor|floatformat:2|intcomma }}</td>
-                                                    <td>{{ cotizacion.incendio_rayo|floatformat:2|intcomma }}</td>
+                                                    <td>{{ valor_vehiculo }}</td>
+                                                    <td>{{ incendio_rayo }}</td>
                                                     <td>-</td>
                                                   </tr>
                                                   <tr>
                                                     <td>Robo y Hurto</td>
-                                                    <td>{{ cotizacion.conductor.valor|floatformat:2|intcomma }}</td>
-                                                    <td>{{ cotizacion.robo_hurto|floatformat:2|intcomma }}</td>
+                                                    <td>{{ valor_vehiculo }}</td>
+                                                    <td>{{ robo_hurto }}</td>
                                                     <td>-</td>
                                                   </tr>
                                                   <tr>
@@ -424,7 +424,7 @@
                                                     {% if cotizacion.importacion_piezas%}
                                                       <td>Incluido</td>
                                                       <td></td>
-                                                      <td>{{ cotizacion.prima_importacion|floatformat:2|intcomma }}</td>
+                                                      <td>{{ prima_importacion }}</td>
                                                     {% else %}
                                                       <td>No Incluido</td>
                                                       <td></td>
@@ -435,17 +435,17 @@
                                                     <td>Acerta Preferencial Plus</td>
                                                     <td>Incluido</td>
                                                     <td></td>
-                                                    <td>{{ cotizacion.prima_preferencialPlus|floatformat:2|intcomma }}</td>
+                                                    <td>{{ cotizacion.prima_preferencialPlus|floatformat:2 }}</td>
                                                   </tr>
                                                 </table>
                                                 <div class="text-right">
                                                   <h5>A pagar en {{ cotizacion.cuota }} Cuota(s)</h5>
-                                                  <h5>Subtotal: B/. {{ cotizacion.subtotal|floatformat:2|intcomma }}</h5>
-                                                  <h5>Impuestos: B/. {{ cotizacion.impuestos|floatformat:2|intcomma }}</h5>
-                                                  <h5>Total a Pagar: B/. {{ cotizacion.total|floatformat:2|intcomma }}</h5>
-                                                  <h5>Prima Mensual: B/. {{ cotizacion.prima_mensual|floatformat:2|intcomma }}</h5>
-                                                  <h5>Prima Pago de Contado: B/. {{ cotizacion.prima_pagoContado|floatformat:2|intcomma }}</h5>
-                                                  <h5>Prima Pago ACH/Visa: B/. {{ cotizacion.prima_pagoVisa|floatformat:2|intcomma }}</h5>
+                                                  <h5>Subtotal: B/. {{ subtotal }}</h5>
+                                                  <h5>Impuestos: B/. {{ impuestos }}</h5>
+                                                  <h5>Total a Pagar: B/. {{ total }}</h5>
+                                                  <h5>Prima Mensual: B/. {{ cotizacion.prima_mensual|floatformat:2 }}</h5>
+                                                  <h5>Prima Pago de Contado: B/. {{ cotizacion.prima_pagoContado|floatformat:2 }}</h5>
+                                                  <h5>Prima Pago ACH/Visa: B/. {{ cotizacion.prima_pagoVisa|floatformat:2 }}</h5>
                                                 </div>
                                                 <br><br>
                                                 Saludos Cordiales,
