--- a/cotizador_acerta/templates/reportes/cotizador_general_detail.html
+++ b/cotizador_acerta/templates/reportes/cotizador_general_detail.html
@@ -2,7 +2,7 @@
 {% load static %}
 {# Load the tag library #}
 {% load bootstrap3 %}
-
+{% load humanize %}
 {% load l10n %}
 
 {# Load CSS and JavaScript #}
