--- a/cotizador_acerta/templates/reportes/cotizaciones_list.html
+++ b/cotizador_acerta/templates/reportes/cotizaciones_list.html
@@ -52,26 +52,20 @@
 				      <td><a href="{% url 'cotizaciones_details' cotizacion.pk %}">Ver</a></td>
 				      <td>
 						<div class="btn-group">
-		                  {% if cotizacion.status == 'Rechazada' or cotizacion.status == 'Aprobada' %}
-		                  	  <button type="button" class="disabled btn btn-default">Acción</button>
-			                  <button type="button" class="disabled btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-			                    <span class="caret"></span>
-			                    <span class="sr-only">Toggle Dropdown</span>
-			                  </button>
-		                  {% else %}
 		                  	  <button type="button" class="btn btn-default">Acción</button>
 		                  	  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
 			                    <span class="caret"></span>
 			                    <span class="sr-only">Toggle Dropdown</span>
 			                  </button>
-		                  {% endif %}
 		                  <ul class="dropdown-menu" role="menu">
-		                  	{% if cotizacion.status == 'Guardada'%}
+		                  	{% if cotizacion.status != 'Enviada'%}
 		                    <li><a href="{% url 'send' cotizacion.pk %}"><i class="fa fa-send">  Enviar</i></a></li>
 		                    <li class="divider"></li>
 		                    {% endif %}
+		                    {% if cotizacion.status != 'Rechazada' and cotizacion.status != 'Aprobada' %}
 		                    <li><a href="{% url 'change-status' cotizacion.pk 0 %}"><i class="fa fa-check-circle" style="color: green;">  Aprobar</i></a></li>
 		                    <li><a href="{% url 'change-status' cotizacion.pk 1 %}"><i class="fa fa-times-circle" style="color: red;">  Rechazar</i></a></li>
+		                    {% endif %}
 		                  </ul>
 		                </div>
 				      </td>
