listas y form de update corredor

--- a/cotizador_acerta/templates/administrador/list_antiguedad.html
+++ b/cotizador_acerta/templates/administrador/list_antiguedad.html
@@ -65,6 +65,7 @@
   $(document).ready(function(){
     $(function () {
         $("#example1").DataTable({
+          "order": [[ 1, "asc" ]],
           "language": {
             "infoEmpty": "No existen entradas para mostrar",
             "info": "Mostrando _START_ hasta _END_ de _TOTAL_ entradas",
