--- a/cotizador_acerta/templates/navbar.html
+++ b/cotizador_acerta/templates/navbar.html
@@ -182,6 +182,9 @@
                   <li style="float: right;">
                       <a href="{% url 'cotizaciones_list' %}">Mis Cotizaciones</a>
                   </li>
+                  <li style="float: right;">
+                      <a href="{% url 'edit-profile' user.pk %}">Editar Perfil</a>
+                  </li>
               </ul>
           </li>
         <li style="float: right;">
