--- a/cotizador_acerta/templates/administrador/new_endoso_form.html
+++ b/cotizador_acerta/templates/administrador/new_endoso_form.html
@@ -16,7 +16,7 @@
 
 {% block titulo %}
     <h1>
-        Editar Factor
+        Crear Endoso
     </h1>
 {% endblock titulo %}
 
@@ -27,7 +27,7 @@
         <!-- general form elements -->
           <div class="box box-primary">
             <div class="box-header with-border">
-              <h3 class="box-title">Factor Endoso: <strong>{{ endoso.endoso }}</strong></h3>
+              <h3 class="box-title">Nuevo Endoso</h3>
             </div><!-- /.box-header -->
             {% bootstrap_form_errors form %}
             <!-- form start -->
@@ -41,7 +41,7 @@
               <div class="box-footer text-center">
                 <div class="form-group">
                   <a href="{% url 'list_endoso' %}" class="btn btn-danger" type="reset">Cancelar</a>
-                  <button class="btn btn-primary" type="submit">Actualizar</button>
+                  <button class="btn btn-primary" type="submit">Crear</button>
                 </div>
               </div>
             </form>
