un viaje de cosas

--- a/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
+++ b/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
@@ -238,7 +238,7 @@
                         {% endif %}
                       </tr>
                       <tr>
-                        <td>Endoso {{ cotizacion.endoso }}</td>
+                        <td>{{ cotizacion.endoso }}</td>
                         <td>Incluido</td>
                         <td></td>
                         <td>{{ cotizacion.prima_endoso|floatformat:2|intcomma }}</td>
