--- a/cotizador_acerta/templates/activate_account.html
+++ b/cotizador_acerta/templates/activate_account.html
@@ -1,4 +1,4 @@
-{% extends "administrador/base_admin.html" %}
+{% extends "base.html" %}
 {# Load the tag library #}
 {% load bootstrap3 %}
 
@@ -36,6 +36,9 @@
     input:focus:-ms-input-placeholder {
         color: #E76C42 !important;
     }
+    .form-field {
+        padding:0px 10px 0px 10px;
+    }
     .login-box-body {
         margin-left: 20%;
         margin-right: 20%
@@ -59,32 +62,32 @@
 
 
 {% block content %}
-<div class="row">
+<div class="row" style="margin-top: 10%;">
     <div class="col-xs-12">
         <div class="row">
             <div class="col-sm-hidden col-xs-hidden col-md-2"></div>
             <div class="col-xs-12 col-sm-12 col-md-8">
                 <div class="box box-danger">
                     <div class="box-header with-border">
-                        <h1 id="titulo-login" class="text-center"><strong>REGISTRO DE VENDEDORES</strong></h1>
+                        <h1 id="titulo-login" class="text-center"><strong>TU CUENTA HA SIDO ACTIVADA!</strong></h1>
+                        <h5 class="text-center"> Ahora elije una nueva contraseña </h5>
                     </div>
                     <div class="box-body">
                         <div class="col-md-1"></div>
                         <div class="col-md-10">
-                            {% bootstrap_form_errors form %}
+                            <div class="hidden">
+                                {% bootstrap_form_errors form %}
+                            </div>
                             <form action="" method="post" role="form" class="form-horizontal">
                                 {% csrf_token %}
-
-                                {% bootstrap_field form.first_name show_label=False %}
-                                {% bootstrap_field form.last_name show_label=False %}
-                                {% bootstrap_field form.email show_label=False %}
-                                {% bootstrap_field form.username show_label=False %}
+                            {% bootstrap_field form.password show_label=False field_class='form-field' %}
+                            {% bootstrap_field form.password2 show_label=False field_class='form-field' %}
 
                                 {% buttons %}
                                     <div class="col-md-3"></div>
                                     <div class="col-sm-4 col-md-6 text-center">
                                         <button id="id_submit" type="submit" class="btn btn-lg calculate">
-                                            Registrar
+                                            Actualizar
                                         </button>
                                     </div>
                                     <div class="col-md-3"></div>
@@ -103,9 +106,15 @@
 {% endblock content %}
 {% block custom_script %}
 <script type="text/javascript">
-    $(document).on("click", "#id_submit", function(e){
-        console.log("entrando");
-        $("#id_username").val($("#id_email").val());
+    $(document).on("change", "#id_password2", function(e){
+        e.preventDefault();
+       p1 = document.getElementById("id_password").value;
+       p2 = document.getElementById("id_password2").value;
+       if (p1 != p2) {
+        $(this).parent().after("<div class='form-field password-validacion' style='color:red; margin-top: 5%; margin-bottom: -4%;'>Las contraseñas deben coindicir</div><br><br><br>");
+        } else {
+            $(".password-validacion").remove();
+        }
     });
 </script>
 {% endblock custom_script %}
