--- a/cotizador_acerta/templates/registrations/password_reset_complete.html
+++ b/cotizador_acerta/templates/registrations/password_reset_complete.html
@@ -43,14 +43,14 @@
     }
     .calculate {
         color: #FFFFFF;
-        background-color: #727270;
+        background-color: #727270 !important;
         text-align: center;
     }
     .calculate {
       transition: all 0.8s ease;
     }
     .calculate:hover {
-      background: #E76C42;
+      background: #E76C42 !important;
       color: #FFFFFF;
     }
     .first {
@@ -63,24 +63,27 @@
     }
 </style>
 {% block content %}
-
-<div class="row">
-    <div class="col-xs-12 first">
+<div class="row" style="margin-top: 10%;">
+    <div class="col-xs-12">
         <div class="row">
-            <div class="col-md-12">
-                <div class="col-md-4"></div>
-                <div class="col-md-4 text-center">
-                    <h1 id="titulo-login" class="text-center"><strong>Reestablecer Contraseña</strong></h1>
-                </div>
-                <div class="col-md-4"></div>
+            <div class="col-sm-hidden col-xs-hidden col-md-2"></div>
+            <div class="col-xs-12 col-sm-12 col-md-8">
+                <div class="box box-danger">
+                    <div class="box-header with-border">
+                        <h1 id="titulo-login" class="text-center"><strong>REESTABLECER CONTRASEÑA</strong></h1>
+                    </div>
+                    <div class="box-body">
+                        <div class="col-md-1"></div>
+                        <div class="col-md-10 text-center">
+                            <h2>Tu contraseña ha sido reestablecida</h2>
+                            <h3>Ahora inicia sesión</h3>
+                            <a href="{% url 'login' %}" class="btn btn-primary text-center">Iniciar Sesión</a>
+                        </div>
+                        <div class="col-md-1"></div>
+                    </div><!-- /.box-body -->
+                </div><!-- /.box -->
             </div>
-            <div class="col-xs-1 col-sm-2 col-md-4"></div>
-            <div class="col-xs-10 col-sm-8 col-md-4">
-                <div class="login-box-body">
-                    <p>Tu contraseña ha sido reestablecida</p>
-                    <a href="{% url 'login' %}" class="btn btn-primary btn-block text-center">Iniciar Sesión</a>
-                </div><!-- /.login-box-body -->
-            </div>
+            <div class="col-sm-hidden col-xs-hidden col-md-2"></div>
         </div>
     </div>
 </div>
