--- a/cotizador_acerta/templates/registrations/password_reset_confirm.html
+++ b/cotizador_acerta/templates/registrations/password_reset_confirm.html
@@ -75,67 +75,72 @@
 {% block content %}
     {% if validlink %}
 
-      <div class="row">
-          <div class="col-xs-12 first">
-              <div class="row">
-                  <div class="col-md-12">
-                      <div class="col-md-4"></div>
-                      <div class="col-md-4 text-center">
-                          <h1 id="titulo-login" class="text-center"><strong>Reestablecer Contraseña</strong></h1>
-                          <div class="alert alert-info" role="alert">
-                              <p>Por favor introduce tu contraseña dos veces.</p>
-                          </div>
-                      </div>
-                      <div class="col-md-4"></div>
-                  </div>
-                  <div class="col-xs-1 col-sm-2 col-md-4"></div>
-                  <div class="col-xs-10 col-sm-8 col-md-4">
-                      {% bootstrap_form_errors form %}
-                      <div class="login-box-body">
-                          <form action="" method="post" role="form" class="form-horizontal">
-                              {% csrf_token %}
+<div class="row" style="margin-top: 10%;">
+    <div class="col-xs-12">
+        <div class="row">
+            <div class="col-sm-hidden col-xs-hidden col-md-2"></div>
+            <div class="col-xs-12 col-sm-12 col-md-8">
+                <div class="box box-danger">
+                    <div class="box-header with-border">
+                        <h1 id="titulo-login" class="text-center"><strong>REESTABLECER CONTRASEÑA</strong></h1>
+                        <h5 class="text-center"> Por favor introduce tu contraseña dos veces. </h5>
+                    </div>
+                    <div class="box-body">
+                        <div class="col-md-1"></div>
+                        <div class="col-md-10">
+                            <div class="hidden">
+                                {% bootstrap_form_errors form %}
+                            </div>
+                            <form action="" method="post" role="form" class="form-horizontal">
+                                {% csrf_token %}
+                            {% bootstrap_field form.new_password1 show_label=False field_class='form-field' %}
+                            {% bootstrap_field form.new_password2 show_label=False field_class='form-field' %}
 
-                              {% bootstrap_form form layout='horizontal' %}
-                              <br>
-
-                              {% buttons %}
-                                  <div class="col-md-2"></div>
-                                  <div class="col-sm-4 col-md-8 text-center">
-                                      <button type="submit" class="btn btn-lg calculate">
-                                          CAMBIAR
-                                      </button>
-                                  </div>
-                                  <div class="col-md-2"></div>
-                              {% endbuttons %}
-                          </form>
-                      </div><!-- /.login-box-body -->
-                  </div>
-              </div>
-          </div>
-      </div>
+                                {% buttons %}
+                                    <div class="col-md-3"></div>
+                                    <div class="col-sm-4 col-md-6 text-center">
+                                        <button id="id_submit" type="submit" class="btn btn-lg calculate">
+                                            CAMBIAR
+                                        </button>
+                                    </div>
+                                    <div class="col-md-3"></div>
+                                {% endbuttons %}
+                            </form>
+                        </div>
+                        <div class="col-md-1"></div>
+                    </div><!-- /.box-body -->
+                </div><!-- /.box -->
+            </div>
+            <div class="col-sm-hidden col-xs-hidden col-md-2"></div>
+        </div>
+    </div>
+</div>
 
     {% else %}
 
-      <div class="row">
-          <div class="col-xs-12 first">
-              <div class="row">
-                  <div class="col-md-12">
-                      <div class="col-md-4"></div>
-                      <div class="col-md-4 text-center">
-                          <h1 id="titulo-login" class="text-center"><strong>Reestablecer Contraseña</strong></h1>
-                      </div>
-                      <div class="col-md-4"></div>
-                  </div>
-                  <div class="col-xs-1 col-sm-2 col-md-4"></div>
-                  <div class="col-xs-10 col-sm-8 col-md-4">
-                      <div class="login-box-body">
-                          <h1>Cambio de contraseña no completado</h1>
-                          <p>Éste link es inválido, probablemente ya fue usado.<br>Por favor realiza la solicitud de nuevo</p>
-                      </div><!-- /.login-box-body -->
-                  </div>
-              </div>
-          </div>
-      </div>
+<div class="row" style="margin-top: 10%;">
+    <div class="col-xs-12">
+        <div class="row">
+            <div class="col-sm-hidden col-xs-hidden col-md-2"></div>
+            <div class="col-xs-12 col-sm-12 col-md-8">
+                <div class="box box-danger">
+                    <div class="box-header with-border">
+                        <h1 id="titulo-login" class="text-center"><strong>REESTABLECER CONTRASEÑA</strong></h1>
+                    </div>
+                    <div class="box-body">
+                        <div class="col-md-1"></div>
+                        <div class="col-md-10 text-center">
+                            <h1>Cambio de contraseña no completado</h1>
+                            <p>Éste link es inválido, probablemente ya fue usado.<br>Por favor realiza la solicitud de nuevo</p>
+                        </div>
+                        <div class="col-md-1"></div>
+                    </div><!-- /.box-body -->
+                </div><!-- /.box -->
+            </div>
+            <div class="col-sm-hidden col-xs-hidden col-md-2"></div>
+        </div>
+    </div>
+</div>
 
     {% endif %}
 
