--- a/cotizador_acerta/templates/registrations/password_reset_done.html
+++ b/cotizador_acerta/templates/registrations/password_reset_done.html
@@ -63,26 +63,29 @@
 {% endblock extracss %}
 
 {% block content %}
-
-<div class="row">
-    <div class="col-xs-12 first">
+<div class="row" style="margin-top: 10%;">
+    <div class="col-xs-12">
         <div class="row">
-            <div class="col-md-12">
-                <div class="col-md-4"></div>
-                <div class="col-md-4 text-center">
-                    <h1 id="titulo-login" class="text-center"><strong>Reestablecer Contraseña</strong></h1>
-                </div>
-                <div class="col-md-4"></div>
+            <div class="col-sm-hidden col-xs-hidden col-md-2"></div>
+            <div class="col-xs-12 col-sm-12 col-md-8">
+                <div class="box box-danger">
+                    <div class="box-header with-border">
+                        <h1 id="titulo-login" class="text-center"><strong>REESTABLECER CONTRASEÑA</strong></h1>
+                    </div>
+                    <div class="box-body">
+                        <div class="col-md-1"></div>
+                        <div class="col-md-10 text-center">
+                            <p>Te hemos enviado un correo con las instrucciones para reestablecer tu contraseña.</p>
+                            <p>Debes recibirlo en unos minutos.</p>
+                        </div>
+                        <div class="col-md-1"></div>
+                    </div><!-- /.box-body -->
+                </div><!-- /.box -->
             </div>
-            <div class="col-xs-1 col-sm-2 col-md-2"></div>
-            <div class="col-xs-10 col-sm-8 col-md-8">
-                <div class="login-box-body">
-                    <p>Te hemos enviado un correo con las instrucciones para reestablecer tu contraseña.</p>
-                    <p>Debes recibirlo en unos minutos.</p>
-                </div><!-- /.login-box-body -->
-            </div>
+            <div class="col-sm-hidden col-xs-hidden col-md-2"></div>
         </div>
     </div>
 </div>
+
 {% endblock content %}
 
