--- a/cotizador_acerta/templates/registrations/password_reset_form.html
+++ b/cotizador_acerta/templates/registrations/password_reset_form.html
@@ -72,42 +72,42 @@
 {% endblock extracss %}
 
 {% block content %}
-
-<div class="row">
-    <div class="col-xs-12 first">
+<div class="row" style="margin-top: 10%;">
+    <div class="col-xs-12">
         <div class="row">
-            <div class="col-md-12">
-                <div class="col-md-4"></div>
-                <div class="col-md-4 text-center">
-                    <h1 id="titulo-login" class="text-center"><strong>Reestablecer Contraseña</strong></h1>
-                    <div class="alert alert-info" role="alert">
-                        <p>Por favor especifica tu correo para reestablecer tu contraseña.</p>
+            <div class="col-sm-hidden col-xs-hidden col-md-2"></div>
+            <div class="col-xs-12 col-sm-12 col-md-8">
+                <div class="box box-danger">
+                    <div class="box-header with-border">
+                        <h1 id="titulo-login" class="text-center"><strong>REESTABLECER CONTRASEÑA</strong></h1>
+                        <h5 class="text-center"> Por favor especifica tu correo para reestablecer tu contraseña. </h5>
                     </div>
-                </div>
-                <div class="col-md-4"></div>
-            </div>
-            <div class="col-xs-1 col-sm-2 col-md-4"></div>
-            <div class="col-xs-10 col-sm-8 col-md-4">
-                {% bootstrap_form_errors form %}
-                <div class="login-box-body">
-                    <form action="" method="post" role="form" class="form-horizontal">
-                        {% csrf_token %}
-
-                        {% bootstrap_form form layout='horizontal' %}
-                        <br>
-
-                        {% buttons %}
-                            <div class="col-md-2"></div>
-                            <div class="col-sm-4 col-md-8 text-center">
-                                <button type="submit" class="btn btn-lg calculate">
-                                    ENVIAR
-                                </button>
+                    <div class="box-body">
+                        <div class="col-md-1"></div>
+                        <div class="col-md-10">
+                            <div class="hidden">
+                                {% bootstrap_form_errors form %}
                             </div>
-                            <div class="col-md-2"></div>
-                        {% endbuttons %}
-                    </form>
-                </div><!-- /.login-box-body -->
+                            <form action="" method="post" role="form" class="form-horizontal">
+                                {% csrf_token %}
+                            {% bootstrap_field form.email show_label=False field_class='form-field' %}
+
+                                {% buttons %}
+                                    <div class="col-md-3"></div>
+                                    <div class="col-sm-4 col-md-6 text-center">
+                                        <button id="id_submit" type="submit" class="btn btn-lg calculate">
+                                            ENVIAR
+                                        </button>
+                                    </div>
+                                    <div class="col-md-3"></div>
+                                {% endbuttons %}
+                            </form>
+                        </div>
+                        <div class="col-md-1"></div>
+                    </div><!-- /.box-body -->
+                </div><!-- /.box -->
             </div>
+            <div class="col-sm-hidden col-xs-hidden col-md-2"></div>
         </div>
     </div>
 </div>
