--- a/cotizador_acerta/templates/registro_corredor.html
+++ b/cotizador_acerta/templates/registro_corredor.html
@@ -75,13 +75,12 @@
                             <form action="" method="post" role="form" class="form-horizontal">
                                 {% csrf_token %}
 
+                                {% bootstrap_field form.razon_social show_label=False %}
                                 {% bootstrap_field form.first_name show_label=False %}
                                 {% bootstrap_field form.last_name show_label=False %}
                                 {% bootstrap_field form.ruc show_label=False %}
                                 {% bootstrap_field form.licencia show_label=False %}
                                 {% bootstrap_field form.email show_label=False %}
-                                {% bootstrap_field form.password show_label=False %}
-                                {% bootstrap_field form.password2 show_label=False %}
                                 {% bootstrap_field form.username show_label=False %}
 
                                 {% buttons %}
