--- a/cotizador_acerta/templates/cotizar/vehiculo.html
+++ b/cotizador_acerta/templates/cotizar/vehiculo.html
@@ -288,19 +288,14 @@
             $( '#id_gastos_medicos' ).prepend('<option class="placeholder" value="" disabled>Gastos Médicos</option>');
             $( '#id_muerte_accidental' ).prepend('<option class="placeholder" value="" disabled>Muerte Accidental</option>');
             $( '#id_modelo' ).prepend('<option class="placeholder" value="" disabled>Modelo</option>');
-            document.getElementById("id_valor_text").value = $("#id_valor").val()+".00";
-            if (/^([0-9]{1,2}\-[0-9]{2,4}\-[0-9]{4})$/.test($("#id_tipo_id").val())) {
-            }
-            else {
-
-            }
+            document.getElementById("id_valor_text").value = $("#id_valor").val() + ".00";
         {% endif %}
     });
 
     $(document).on("change", "#id_identificacion", function(e){
         e.preventDefault();
        if( $("#id_tipo_id_0").is(':checked') ){
-            var cedula = new RegExp('^([0-9]{1,2}\-[0-9]{2,4}\-[0-9]{4})$');
+            var cedula = new RegExp('^([0-9]{1,2}\-?[0-9]{2,4}\-?[0-9]{3,4})$');
             if (cedula.test($(this).val())) {
                 $('#id_submit').prop('disabled', false);
                 $(".cedula-validacion").remove();
@@ -319,7 +314,7 @@
         e.preventDefault();
        if( $("#id_tipo_id_0").is(':checked') ){
             $(".cedula-help").remove();
-            $("#id_identificacion").parent().after("<div class='form-field cedula-help' style='color: #727270; margin-top: 5%; margin-bottom: -4%;'>Cédula. Ej: 12-123-1234</div>");
+            $("#id_identificacion").parent().after("<div class='form-field cedula-help' style='color: #727270; margin-top: 5%; margin-bottom: -4%;'>Cédula. Ej: 12-123-1234 ó 121231234</div>");
        } else {
             $(".cedula-help").remove();
        }
